[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-py"
version = "0.1.18"
description = "Python wrapper for running the llama.cpp server"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
authors = [
    { name = "sergey21000" }
]

dependencies = [
    "aiohttp>=3.12",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "openai>=2.5.0",
    "python-dotenv>=1.2.1",
    "platformdirs>=4.5.0",
    "pillow>=11",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "colorama>=0.4.6",
]

[tool.setuptools.packages.find]
include = ["llama_cpp_py*"]

[project.urls]
Repository = "https://github.com/sergey21000/llama-cpp-py"
